tests/regression/errors/basic/undefined_var_6.csd
// Undefined variable test 6
vibez.spill("Using undefined:", undefined_var_6)
sus result drip = missing_variable + 6
